parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AND
    AS
    ASYNC
    BREAK
    CASE
    CATCH
    CLASS
    CONST
    CONSTRUCTOR
    CONTINUE
    DEFAULT
    DO
    ENUM
    EXTENDS
    EXTERNAL
    FACTORY
    FALSE
    FINAL
    FUNCTION
    GET
    HIDE
    IMPORT
    INFIX
    INIT
    INTERFACE
    IS
    LIBRARY
    NEQUAL
    NEW
    NULL
    OPEN
    OPERATOR
    OR
    OUT
    OVERRIDE
    PART
    SET
    SETPARAM
    STATIC
    SUPER
    SWITCH
    SYNC
    THIS
    THROW
    TRUE
    TRY
    TYPEALIAS
    TYPEOF
    WITH

Grammar

Rule 0     S' -> documento
Rule 1     documento -> implementa_funcion
Rule 2     documento -> instrucciones
Rule 3     cuerpoF -> asignacion
Rule 4     cuerpoF -> impresion
Rule 5     cuerpoF -> asigna
Rule 6     cuerpoF -> compareType
Rule 7     cuerpoF -> compareGreaterthan
Rule 8     cuerpoF -> compareSmallerthan
Rule 9     cuerpoF -> list
Rule 10    cuerpoF -> mutableList
Rule 11    cuerpoF -> pair
Rule 12    cuerpoF -> inData
Rule 13    cuerpoF -> if
Rule 14    cuerpoF -> for
Rule 15    cuerpoF -> while
Rule 16    cuerpoF -> when
Rule 17    asignacion -> designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
Rule 18    designacion -> VAL
Rule 19    designacion -> VAR
Rule 20    tipo -> TINT
Rule 21    tipo -> TFLOAT
Rule 22    tipo -> STRING
Rule 23    diamondType -> MINOR tipo MAYOR
Rule 24    listAsignacion -> designacion VARIABLE DOUBLEPOINTS LIST diamondType
Rule 25    listAsignacion -> designacion VARIABLE
Rule 26    listOf -> LISTOF LPAREN elementos RPAREN
Rule 27    elementos -> elementos COMA valor
Rule 28    elementos -> valor
Rule 29    valor -> VINT
Rule 30    valor -> VFLOAT
Rule 31    valor -> STRING
Rule 32    list -> listAsignacion IGUAL listOf
Rule 33    add -> VINT PLUS VINT
Rule 34    add -> VINT PLUS VFLOAT
Rule 35    add -> VFLOAT PLUS VFLOAT
Rule 36    subtract -> VINT MINUS VINT
Rule 37    subtract -> VINT MINUS VFLOAT
Rule 38    subtract -> VFLOAT MINUS VFLOAT
Rule 39    multiply -> VINT TIMES VINT
Rule 40    multiply -> VFLOAT TIMES VFLOAT
Rule 41    multiply -> VFLOAT TIMES VINT
Rule 42    multiply -> VINT TIMES VFLOAT
Rule 43    divide -> VINT DIVIDE VINT
Rule 44    divide -> VFLOAT DIVIDE VFLOAT
Rule 45    divide -> VFLOAT DIVIDE VINT
Rule 46    divide -> VINT DIVIDE VFLOAT
Rule 47    mutListAsignacion -> designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
Rule 48    mutListAsignacion -> designacion VARIABLE
Rule 49    mutableListOf -> MUTABLELISTOF LPAREN elementos RPAREN
Rule 50    mutableList -> mutListAsignacion IGUAL mutableListOf
Rule 51    pairAsignation -> designacion LPAREN VARIABLE COMA VARIABLE RPAREN
Rule 52    pairBody -> PAIR LPAREN valor COMA valor RPAREN
Rule 53    pair -> pairAsignation IGUAL pairBody
Rule 54    inData -> designacion VARIABLE IGUAL READLINE LPAREN RPAREN
Rule 55    compareType -> VINT IGUAL VINT
Rule 56    compareType -> VFLOAT IGUAL VFLOAT
Rule 57    compareGreaterthan -> VINT MAYOR VINT
Rule 58    compareGreaterthan -> VFLOAT MAYOR VFLOAT
Rule 59    compareSmallerthan -> VINT MINOR VINT
Rule 60    compareSmallerthan -> VFLOAT MINOR VFLOAT
Rule 61    impresion -> PRINTLN LPAREN valor RPAREN
Rule 62    condicion -> compareType
Rule 63    condicion -> compareGreaterthan
Rule 64    condicion -> compareSmallerthan
Rule 65    if -> IF LPAREN condicion RPAREN LKEY cuerpoF RKEY
Rule 66    if -> IF LPAREN condicion RPAREN LKEY cuerpoF RKEY else
Rule 67    if -> IF LPAREN condicion RPAREN LKEY cuerpoF RKEY elseif else
Rule 68    elseif -> ELSE IF LPAREN condicion RPAREN LKEY cuerpoF RKEY
Rule 69    else -> LKEY cuerpoF RKEY
Rule 70    condicionFor -> condicionRango
Rule 71    condicionFor -> condicionBloque
Rule 72    condicionRango -> VARIABLE IN VINT DOT DOT VINT
Rule 73    condicionBloque -> VARIABLE IN LISTOF
Rule 74    for -> FOR LPAREN condicionFor RPAREN LKEY cuerpoF RKEY
Rule 75    while -> WHILE LPAREN condicion RPAREN LKEY cuerpoF RKEY
Rule 76    when -> WHEN LPAREN VARIABLE RPAREN LKEY cuerpoF RKEY
Rule 77    implementa_funcion -> FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
Rule 78    implementa_funcion -> FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
Rule 79    implementa_funcion -> FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
Rule 80    implementa_funcion -> FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
Rule 81    listaparametros -> parametro
Rule 82    listaparametros -> parametro COMA listaparametros
Rule 83    parametro -> VARIABLE DOUBLEPOINTS tipo
Rule 84    retorno -> RETURN asignado
Rule 85    instrucciones -> cuerpoF
Rule 86    instrucciones -> cuerpoF instrucciones
Rule 87    asigna -> VARIABLE IGUAL asignado
Rule 88    asignado -> valor
Rule 89    asignado -> VARIABLE
Rule 90    asignado -> compareType
Rule 91    asignado -> compareGreaterthan
Rule 92    asignado -> compareSmallerthan
Rule 93    asignado -> add
Rule 94    asignado -> subtract
Rule 95    asignado -> multiply
Rule 96    asignado -> divide

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 
AS                   : 
ASYNC                : 
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COMA                 : 27 51 52 82
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
DEFAULT              : 
DIVIDE               : 43 44 45 46
DO                   : 
DOT                  : 72 72
DOUBLEPOINTS         : 17 24 47 77 78 79 80 83
ELSE                 : 68
ENUM                 : 
EXTENDS              : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 
FINAL                : 
FOR                  : 74
FUN                  : 77 78 79 80
FUNCTION             : 
GET                  : 
HIDE                 : 
IF                   : 65 66 67 68
IGUAL                : 17 32 50 53 54 55 56 87
IMPORT               : 
IN                   : 72 73
INFIX                : 
INIT                 : 
INTERFACE            : 
IS                   : 
LIBRARY              : 
LIST                 : 24
LISTOF               : 26 73
LKEY                 : 65 66 67 68 69 74 75 76 77 78 79 80
LPAREN               : 26 49 51 52 54 61 65 66 67 68 74 75 76 77 78 79 80
MAYOR                : 23 57 58
MINOR                : 23 59 60
MINUS                : 36 37 38
MUTABLELIST          : 47
MUTABLELISTOF        : 49
NEQUAL               : 
NEW                  : 
NULL                 : 
OPEN                 : 
OPERATOR             : 
OR                   : 
OUT                  : 
OVERRIDE             : 
PAIR                 : 52
PART                 : 
PLUS                 : 33 34 35
PRINTLN              : 61
READLINE             : 54
RETURN               : 84
RKEY                 : 65 66 67 68 69 74 75 76 77 78 79 80
RPAREN               : 26 49 51 52 54 61 65 66 67 68 74 75 76 77 78 79 80
SET                  : 
SETPARAM             : 
STATIC               : 
STRING               : 22 31
SUPER                : 
SWITCH               : 
SYNC                 : 
TFLOAT               : 21
THIS                 : 
THROW                : 
TIMES                : 39 40 41 42
TINT                 : 20
TRUE                 : 
TRY                  : 
TYPEALIAS            : 
TYPEOF               : 
VAL                  : 18
VAR                  : 19
VARIABLE             : 17 24 25 47 48 51 51 54 72 73 76 77 78 79 80 83 87 89
VFLOAT               : 30 34 35 35 37 38 38 40 40 41 42 44 44 45 46 56 56 58 58 60 60
VINT                 : 29 33 33 34 36 36 37 39 39 41 42 43 43 45 46 55 55 57 57 59 59 72 72
VOID                 : 79 80
WHEN                 : 76
WHILE                : 75
WITH                 : 
error                : 

Nonterminals, with rules where they appear

add                  : 93
asigna               : 5
asignacion           : 3
asignado             : 84 87
compareGreaterthan   : 7 63 91
compareSmallerthan   : 8 64 92
compareType          : 6 62 90
condicion            : 65 66 67 68 75
condicionBloque      : 71
condicionFor         : 74
condicionRango       : 70
cuerpoF              : 65 66 67 68 69 74 75 76 85 86
designacion          : 17 24 25 47 48 51 54
diamondType          : 24 47
divide               : 96
documento            : 0
elementos            : 26 27 49
else                 : 66 67
elseif               : 67
for                  : 14
if                   : 13
implementa_funcion   : 1
impresion            : 4
inData               : 12
instrucciones        : 2 77 78 79 80 86
list                 : 9
listAsignacion       : 32
listOf               : 32
listaparametros      : 77 80 82
multiply             : 95
mutListAsignacion    : 50
mutableList          : 10
mutableListOf        : 50
pair                 : 11
pairAsignation       : 53
pairBody             : 53
parametro            : 81 82
retorno              : 77 78
subtract             : 94
tipo                 : 17 23 77 78 83
valor                : 17 27 28 52 52 61 88
when                 : 16
while                : 15

Parsing method: LALR

state 0

    (0) S' -> . documento
    (1) documento -> . implementa_funcion
    (2) documento -> . instrucciones
    (77) implementa_funcion -> . FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (78) implementa_funcion -> . FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (79) implementa_funcion -> . FUN VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (80) implementa_funcion -> . FUN VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (85) instrucciones -> . cuerpoF
    (86) instrucciones -> . cuerpoF instrucciones
    (3) cuerpoF -> . asignacion
    (4) cuerpoF -> . impresion
    (5) cuerpoF -> . asigna
    (6) cuerpoF -> . compareType
    (7) cuerpoF -> . compareGreaterthan
    (8) cuerpoF -> . compareSmallerthan
    (9) cuerpoF -> . list
    (10) cuerpoF -> . mutableList
    (11) cuerpoF -> . pair
    (12) cuerpoF -> . inData
    (13) cuerpoF -> . if
    (14) cuerpoF -> . for
    (15) cuerpoF -> . while
    (16) cuerpoF -> . when
    (17) asignacion -> . designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
    (61) impresion -> . PRINTLN LPAREN valor RPAREN
    (87) asigna -> . VARIABLE IGUAL asignado
    (55) compareType -> . VINT IGUAL VINT
    (56) compareType -> . VFLOAT IGUAL VFLOAT
    (57) compareGreaterthan -> . VINT MAYOR VINT
    (58) compareGreaterthan -> . VFLOAT MAYOR VFLOAT
    (59) compareSmallerthan -> . VINT MINOR VINT
    (60) compareSmallerthan -> . VFLOAT MINOR VFLOAT
    (32) list -> . listAsignacion IGUAL listOf
    (50) mutableList -> . mutListAsignacion IGUAL mutableListOf
    (53) pair -> . pairAsignation IGUAL pairBody
    (54) inData -> . designacion VARIABLE IGUAL READLINE LPAREN RPAREN
    (65) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY
    (66) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY else
    (67) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY elseif else
    (74) for -> . FOR LPAREN condicionFor RPAREN LKEY cuerpoF RKEY
    (75) while -> . WHILE LPAREN condicion RPAREN LKEY cuerpoF RKEY
    (76) when -> . WHEN LPAREN VARIABLE RPAREN LKEY cuerpoF RKEY
    (18) designacion -> . VAL
    (19) designacion -> . VAR
    (24) listAsignacion -> . designacion VARIABLE DOUBLEPOINTS LIST diamondType
    (25) listAsignacion -> . designacion VARIABLE
    (47) mutListAsignacion -> . designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
    (48) mutListAsignacion -> . designacion VARIABLE
    (51) pairAsignation -> . designacion LPAREN VARIABLE COMA VARIABLE RPAREN

    FUN             shift and go to state 4
    PRINTLN         shift and go to state 22
    VARIABLE        shift and go to state 5
    VINT            shift and go to state 23
    VFLOAT          shift and go to state 24
    IF              shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    WHEN            shift and go to state 31
    VAL             shift and go to state 32
    VAR             shift and go to state 33

    documento                      shift and go to state 1
    implementa_funcion             shift and go to state 2
    instrucciones                  shift and go to state 3
    cuerpoF                        shift and go to state 6
    asignacion                     shift and go to state 7
    impresion                      shift and go to state 8
    asigna                         shift and go to state 9
    compareType                    shift and go to state 10
    compareGreaterthan             shift and go to state 11
    compareSmallerthan             shift and go to state 12
    list                           shift and go to state 13
    mutableList                    shift and go to state 14
    pair                           shift and go to state 15
    inData                         shift and go to state 16
    if                             shift and go to state 17
    for                            shift and go to state 18
    while                          shift and go to state 19
    when                           shift and go to state 20
    designacion                    shift and go to state 21
    listAsignacion                 shift and go to state 25
    mutListAsignacion              shift and go to state 26
    pairAsignation                 shift and go to state 27

state 1

    (0) S' -> documento .



state 2

    (1) documento -> implementa_funcion .

    $end            reduce using rule 1 (documento -> implementa_funcion .)


state 3

    (2) documento -> instrucciones .

    $end            reduce using rule 2 (documento -> instrucciones .)


state 4

    (77) implementa_funcion -> FUN . VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (78) implementa_funcion -> FUN . VARIABLE LPAREN RPAREN DOUBLEPOINTS tipo LKEY instrucciones retorno RKEY
    (79) implementa_funcion -> FUN . VARIABLE LPAREN RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY
    (80) implementa_funcion -> FUN . VARIABLE LPAREN listaparametros RPAREN DOUBLEPOINTS VOID LKEY instrucciones RKEY

    VARIABLE        shift and go to state 34


state 5

    (87) asigna -> VARIABLE . IGUAL asignado

    IGUAL           shift and go to state 35


state 6

    (85) instrucciones -> cuerpoF .
    (86) instrucciones -> cuerpoF . instrucciones
    (85) instrucciones -> . cuerpoF
    (86) instrucciones -> . cuerpoF instrucciones
    (3) cuerpoF -> . asignacion
    (4) cuerpoF -> . impresion
    (5) cuerpoF -> . asigna
    (6) cuerpoF -> . compareType
    (7) cuerpoF -> . compareGreaterthan
    (8) cuerpoF -> . compareSmallerthan
    (9) cuerpoF -> . list
    (10) cuerpoF -> . mutableList
    (11) cuerpoF -> . pair
    (12) cuerpoF -> . inData
    (13) cuerpoF -> . if
    (14) cuerpoF -> . for
    (15) cuerpoF -> . while
    (16) cuerpoF -> . when
    (17) asignacion -> . designacion VARIABLE DOUBLEPOINTS tipo IGUAL valor
    (61) impresion -> . PRINTLN LPAREN valor RPAREN
    (87) asigna -> . VARIABLE IGUAL asignado
    (55) compareType -> . VINT IGUAL VINT
    (56) compareType -> . VFLOAT IGUAL VFLOAT
    (57) compareGreaterthan -> . VINT MAYOR VINT
    (58) compareGreaterthan -> . VFLOAT MAYOR VFLOAT
    (59) compareSmallerthan -> . VINT MINOR VINT
    (60) compareSmallerthan -> . VFLOAT MINOR VFLOAT
    (32) list -> . listAsignacion IGUAL listOf
    (50) mutableList -> . mutListAsignacion IGUAL mutableListOf
    (53) pair -> . pairAsignation IGUAL pairBody
    (54) inData -> . designacion VARIABLE IGUAL READLINE LPAREN RPAREN
    (65) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY
    (66) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY else
    (67) if -> . IF LPAREN condicion RPAREN LKEY cuerpoF RKEY elseif else
    (74) for -> . FOR LPAREN condicionFor RPAREN LKEY cuerpoF RKEY
    (75) while -> . WHILE LPAREN condicion RPAREN LKEY cuerpoF RKEY
    (76) when -> . WHEN LPAREN VARIABLE RPAREN LKEY cuerpoF RKEY
    (18) designacion -> . VAL
    (19) designacion -> . VAR
    (24) listAsignacion -> . designacion VARIABLE DOUBLEPOINTS LIST diamondType
    (25) listAsignacion -> . designacion VARIABLE
    (47) mutListAsignacion -> . designacion VARIABLE DOUBLEPOINTS MUTABLELIST diamondType
    (48) mutListAsignacion -> . designacion VARIABLE
    (51) pairAsignation -> . designacion LPAREN VARIABLE COMA VARIABLE RPAREN

    $end            reduce using rule 85 (instrucciones -> cuerpoF .)
    RETURN          reduce using rule 85 (instrucciones -> cuerpoF .)
    RKEY            reduce using rule 85 (instrucciones -> cuerpoF .)
    PRINTLN         shift and go to state 22
    VARIABLE        shift and go to state 5
    VINT            shift and go to state 23
    VFLOAT          shift and go to state 24
    IF              shift and go to state 28
    FOR             shift and go to state 29
    WHILE           shift and go to state 30
    WHEN            shift and go to state 31
    VAL             shift and go to state 32
    VAR             shift and go to state 33

    cuerpoF                        shift and go to state 6
    instrucciones                  shift and go to state 36
    asignacion                     shift and go to state 7
    impresion                      shift and go to state 8
    asigna                         shift and go to state 9
    compareType                    shift and go to state 10
    compareGreaterthan             shift and go to state 11
    compareSmallerthan             shift and go to state 12
    list                           shift and go to state 13
    mutableList                    shift and go to state 14
    pair                           shift and go to state 15
    inData                         shift and go to state 16
    if                             shift and go to state 17
    for                            shift and go to state 18
    while                          shift and go to state 19
    when                           shift and go to state 20
    designacion                    shift and go to state 21
    listAsignacion                 shift and go to state 25
    mutListAsignacion              shift and go to state 26
    pairAsignation                 shift and go to state 27

state 7

    (3) cuerpoF -> asignacion .

    PRINTLN         reduce using rule 3 (cuerpoF -> asignacion .)
    VARIABLE        reduce using rule 3 (cuerpoF -> asignacion .)
    VINT            reduce using rule 3 (cuerpoF -> asignacion .)
    VFLOAT          reduce using rule 3 (cuerpoF -> asignacion .)
    IF              reduce using rule 3 (cuerpoF -> asignacion .)
    FOR             reduce using rule 3 (cuerpoF -> asignacion .)
    WHILE           reduce using rule 3 (cuerpoF -> asignacion .)
    WHEN            reduce using rule 3 (cuerpoF -> asignacion .)
    VAL             reduce using rule 3 (cuerpoF -> asignacion .)
    VAR             reduce using rule 3 (cuerpoF -> asignacion .)
    $end            reduce using rule 3 (cuerpoF -> asignacion .)
    RETURN          reduce using rule 3 (cuerpoF -> asignacion .)
    RKEY            reduce using rule 3 (cuerpoF -> asignacion .)


state 8

    (4) cuerpoF -> impresion .

    PRINTLN         reduce using rule 4 (cuerpoF -> impresion .)
    VARIABLE        reduce using rule 4 (cuerpoF -> impresion .)
    VINT            reduce using rule 4 (cuerpoF -> impresion .)
    VFLOAT          reduce using rule 4 (cuerpoF -> impresion .)
    IF              reduce using rule 4 (cuerpoF -> impresion .)
    FOR             reduce using rule 4 (cuerpoF -> impresion .)
    WHILE           reduce using rule 4 (cuerpoF -> impresion .)
    WHEN            reduce using rule 4 (cuerpoF -> impresion .)
    VAL             reduce using rule 4 (cuerpoF -> impresion .)
    VAR             reduce using rule 4 (cuerpoF -> impresion .)
    $end            reduce using rule 4 (cuerpoF -> impresion .)
    RETURN          reduce using rule 4 (cuerpoF -> impresion .)
    RKEY            reduce using rule 4 (cuerpoF -> impresion .)


state 9

    (5) cuerpoF -> asigna .

    PRINTLN         reduce using rule 5 (cuerpoF -> asigna .)
    VARIABLE        reduce using rule 5 (cuerpoF -> asigna .)
    VINT            reduce using rule 5 (cuerpoF -> asigna .)
    VFLOAT          reduce using rule 5 (cuerpoF -> asigna .)
    IF              reduce using rule 5 (cuerpoF -> asigna .)
    FOR             reduce using rule 5 (cuerpoF -> asigna .)
    WHILE           reduce using rule 5 (cuerpoF -> asigna .)
    WHEN            reduce using rule 5 (cuerpoF -> asigna .)
    VAL             reduce using rule 5 (cuerpoF -> asigna .)
    VAR             reduce using rule 5 (cuerpoF -> asigna .)
    $end            reduce using rule 5 (cuerpoF -> asigna .)
    RETURN          reduce using rule 5 (cuerpoF -> asigna .)
    RKEY            reduce using rule 5 (cuerpoF -> asigna .)


state 10

    (6) cuerpoF -> compareType .

    PRINTLN         reduce using rule 6 (cuerpoF -> compareType .)
    VARIABLE        reduce using rule 6 (cuerpoF -> compareType .)
    VINT            reduce using rule 6 (cuerpoF -> compareType .)
    VFLOAT          reduce using rule 6 (cuerpoF -> compareType .)
    IF              reduce using rule 6 (cuerpoF -> compareType .)
    FOR             reduce using rule 6 (cuerpoF -> compareType .)
    WHILE           reduce using rule 6 (cuerpoF -> compareType .)
    WHEN            reduce using rule 6 (cuerpoF -> compareType .)
    VAL             reduce using rule 6 (cuerpoF -> compareType .)
    VAR             reduce using rule 6 (cuerpoF -> compareType .)
    $end            reduce using rule 6 (cuerpoF -> compareType .)
    RETURN          reduce using rule 6 (cuerpoF -> compareType .)
    RKEY            reduce using rule 6 (cuerpoF -> compareType .)


state 11

    (7) cuerpoF -> compareGreaterthan .

    PRINTLN         reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    VARIABLE        reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    VINT            reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    VFLOAT          reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    IF              reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    FOR             reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    WHILE           reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    WHEN            reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    VAL             reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    VAR             reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    $end            reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    RETURN          reduce using rule 7 (cuerpoF -> compareGreaterthan .)
    RKEY            reduce using rule 7 (cuerpoF -> compareGreaterthan .)


state 12

    (8) cuerpoF -> compareSmallerthan .

    PRINTLN         reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    VARIABLE        reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    VINT            reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    VFLOAT          reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    IF              reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    FOR             reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    WHILE           reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    WHEN            reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    VAL             reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    VAR             reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    $end            reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    RETURN          reduce using rule 8 (cuerpoF -> compareSmallerthan .)
    RKEY            reduce using rule 8 (cuerpoF -> compareSmallerthan .)


state 13

    (9) cuerpoF -> list .

    PRINTLN         reduce using rule 9 (cuerpoF -> list .)
    VARIABLE        reduce using rule 9 (cuerpoF -> list .)
    VINT            reduce using rule 9 (cuerpoF -> list .)
    VFLOAT          reduce using rule 9 (cuerpoF -> list .)
    IF              reduce using rule 9 (cuerpoF -> list .)
    FOR             reduce using rule 9 (cuerpoF -> list .)
    WHILE           reduce using rule 9 (cuerpoF -> list .)
    WHEN            reduce using rule 9 (cuerpoF -> list .)
    VAL             reduce using rule 9 (cuerpoF -> list .)
    VAR             reduce using rule 9 (cuerpoF -> list .)
    $end            reduce using rule 9 (cuerpoF -> list .)
    RETURN          reduce using rule 9 (cuerpoF -> list .)
    RKEY            reduce using rule 9 (cuerpoF -> list .)


state 14

    (10) cuerpoF -> mutableList .
